--- a/notebooks/06_export_rgb_context_geemap.ipynb
+++ b/notebooks/06_export_rgb_context_geemap.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "ddec29d9",
    "metadata": {},
    "outputs": [
@@ -53,7 +53,7 @@
     "import ee\n",
     "import geemap\n",
     "import geopandas as gpd\n",
-    "import json\n",
+    "\n",
     "\n",
     "\n",
     "# Authenticate once (browser popup). After this, ee.Initialize() works.\n",
@@ -68,7 +68,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
+   "id": "d8d942da",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Authenticate once (browser popup). After this, ee.Initialize() works.\n",
+    "try:\n",
+    "    ee.Initialize()\n",
+    "except Exception as e:\n",
+    "    ee.Authenticate()\n",
+    "    ee.Initialize()\n",
+    "\n",
+    "print(\"✅ Earth Engine initialized\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "id": "d488d0bc",
    "metadata": {},
    "outputs": [
@@ -110,52 +127,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CRS: EPSG:4326\n",
-      "Rows: 1\n",
-      "Geometry types: {'MultiPolygon': 1}\n",
-      "Valid geometries: {True: 1}\n",
-      "After fix - valid: True\n",
-      "After fix - type: Polygon\n"
+      "CRS: EPSG:4326\n"
      ]
     }
    ],
    "source": [
     "# %%\n",
-    "from pathlib import Path\n",
-    "import geopandas as gpd\n",
+    "\n",
     "\n",
     "AOI_GEOJSON = r\"C:\\GIS\\my_water_projects\\openwater-shrinking-lake-monitor\\data\\external\\aoi.geojson\"\n",
     "\n",
     "gdf = gpd.read_file(AOI_GEOJSON)\n",
     "print(\"CRS:\", gdf.crs)\n",
-    "print(\"Rows:\", len(gdf))\n",
-    "print(\"Geometry types:\", gdf.geom_type.value_counts().to_dict())\n",
-    "print(\"Valid geometries:\", gdf.is_valid.value_counts().to_dict())\n",
     "\n",
-    "# Repair: make valid + dissolve to one geometry\n",
-    "# (buffer(0) is a classic fix; make_valid is better if available)\n",
-    "gdf = gdf.to_crs(\"EPSG:4326\")\n",
-    "\n",
-    "if hasattr(gdf.geometry, \"make_valid\"):\n",
-    "    gdf[\"geometry\"] = gdf.geometry.make_valid()\n",
-    "else:\n",
-    "    # Shapely 1.x fallback\n",
-    "    gdf[\"geometry\"] = gdf.geometry.buffer(0)\n",
-    "\n",
-    "# Dissolve into one AOI (Earth Engine likes one polygon)\n",
-    "aoi_geom = gdf.union_all()\n",
-    "\n",
-    "# Wrap back into a GeoDataFrame\n",
-    "gdf_fixed = gpd.GeoDataFrame(geometry=[aoi_geom], crs=\"EPSG:4326\")\n",
-    "\n",
-    "print(\"After fix - valid:\", gdf_fixed.is_valid.values[0])\n",
-    "print(\"After fix - type:\", gdf_fixed.geom_type.values[0])\n"
+    "\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "628ef871",
+   "id": "496ae170",
    "metadata": {},
    "outputs": [
     {
@@ -193,43 +184,63 @@
      "output_type": "display_data"
     },
     {
-     "ename": "EEException",
-     "evalue": "Invalid GeoJSON geometry.",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mEEException\u001b[39m                               Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[8]\u001b[39m\u001b[32m, line 7\u001b[39m\n\u001b[32m      4\u001b[39m geom_json = gdf_fixed.geometry.iloc[\u001b[32m0\u001b[39m].__geo_interface__\n\u001b[32m      6\u001b[39m \u001b[38;5;66;03m# Create EE geometry directly\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m7\u001b[39m aoi = \u001b[43mee\u001b[49m\u001b[43m.\u001b[49m\u001b[43mGeometry\u001b[49m\u001b[43m(\u001b[49m\u001b[43mgeom_json\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m      9\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[33m✅ AOI converted to ee.Geometry\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m     10\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[33mAOI type:\u001b[39m\u001b[33m\"\u001b[39m, geom_json[\u001b[33m\"\u001b[39m\u001b[33mtype\u001b[39m\u001b[33m\"\u001b[39m])\n",
-      "\u001b[36mFile \u001b[39m\u001b[32mc:\\ProgramData\\miniforge3\\envs\\geemap\\Lib\\site-packages\\ee\\computedobject.py:29\u001b[39m, in \u001b[36mComputedObjectMetaclass.__call__\u001b[39m\u001b[34m(cls, *args, **kwargs)\u001b[39m\n\u001b[32m     27\u001b[39m   \u001b[38;5;28;01mreturn\u001b[39;00m args[\u001b[32m0\u001b[39m]\n\u001b[32m     28\u001b[39m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[32m---> \u001b[39m\u001b[32m29\u001b[39m   \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mtype\u001b[39;49m\u001b[43m.\u001b[49m\u001b[34;43m__call__\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mcls\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m*\u001b[49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m*\u001b[49m\u001b[43m*\u001b[49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[36mFile \u001b[39m\u001b[32mc:\\ProgramData\\miniforge3\\envs\\geemap\\Lib\\site-packages\\ee\\_utils.py:39\u001b[39m, in \u001b[36maccept_opt_prefix.<locals>.opt_fixed.<locals>.wrapper\u001b[39m\u001b[34m(*args, **kwargs)\u001b[39m\n\u001b[32m     37\u001b[39m     \u001b[38;5;28;01mif\u001b[39;00m new_key \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;129;01min\u001b[39;00m kwargs:\n\u001b[32m     38\u001b[39m       kwargs[new_key] = old_key_val\n\u001b[32m---> \u001b[39m\u001b[32m39\u001b[39m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mfunc\u001b[49m\u001b[43m(\u001b[49m\u001b[43m*\u001b[49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m*\u001b[49m\u001b[43m*\u001b[49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[36mFile \u001b[39m\u001b[32mc:\\ProgramData\\miniforge3\\envs\\geemap\\Lib\\site-packages\\ee\\geometry.py:95\u001b[39m, in \u001b[36mGeometry.__init__\u001b[39m\u001b[34m(self, geo_json, proj, geodesic, evenOdd)\u001b[39m\n\u001b[32m     92\u001b[39m   geo_json = geo_json.encode()\n\u001b[32m     94\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m Geometry._isValidGeometry(geo_json):\n\u001b[32m---> \u001b[39m\u001b[32m95\u001b[39m   \u001b[38;5;28;01mraise\u001b[39;00m ee_exception.EEException(\u001b[33m'\u001b[39m\u001b[33mInvalid GeoJSON geometry.\u001b[39m\u001b[33m'\u001b[39m)\n\u001b[32m     97\u001b[39m \u001b[38;5;28msuper\u001b[39m().\u001b[34m__init__\u001b[39m(\u001b[38;5;28;01mNone\u001b[39;00m, \u001b[38;5;28;01mNone\u001b[39;00m)\n\u001b[32m     99\u001b[39m \u001b[38;5;66;03m# The type of the geometry.\u001b[39;00m\n",
-      "\u001b[31mEEException\u001b[39m: Invalid GeoJSON geometry."
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ Using bbox rectangle AOI\n",
+      "[np.float64(-107.21444572778415), np.float64(33.14571033916773), np.float64(-107.14274375499289), np.float64(33.31855197156376)]\n"
      ]
     }
    ],
    "source": [
-    "# %%\n",
+    "minx, miny, maxx, maxy = gdf.total_bounds  # uses your original gdf\n",
+    "aoi_bbox = ee.Geometry.Rectangle([minx, miny, maxx, maxy])\n",
     "\n",
-    "# Convert fixed AOI geometry to GeoJSON dict\n",
-    "geom_json = gdf_fixed.geometry.iloc[0].__geo_interface__\n",
-    "\n",
-    "# Force to pure JSON types (tuples -> lists)\n",
-    "geom_json = json.loads(json.dumps(geom_json))\n",
-    "\n",
-    "# Create EE geometry directly\n",
-    "aoi = ee.Geometry(geom_json)\n",
-    "\n",
-    "print(\"✅ AOI converted to ee.Geometry\")\n",
-    "print(\"AOI type:\", geom_json[\"type\"])\n",
-    "\n"
+    "print(\"✅ Using bbox rectangle aoi_bbox\")\n",
+    "print([minx, miny, maxx, maxy])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "2f51da4e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "            <style>\n",
+       "                .geemap-dark {\n",
+       "                    --jp-widgets-color: white;\n",
+       "                    --jp-widgets-label-color: white;\n",
+       "                    --jp-ui-font-color1: white;\n",
+       "                    --jp-layout-color2: #454545;\n",
+       "                    background-color: #383838;\n",
+       "                }\n",
+       "\n",
+       "                .geemap-dark .jupyter-button {\n",
+       "                    --jp-layout-color3: #383838;\n",
+       "                }\n",
+       "\n",
+       "                .geemap-colab {\n",
+       "                    background-color: var(--colab-primary-surface-color, white);\n",
+       "                }\n",
+       "\n",
+       "                .geemap-colab .jupyter-button {\n",
+       "                    --jp-layout-color3: var(--colab-primary-surface-color, white);\n",
+       "                }\n",
+       "            </style>\n",
+       "            "
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# %%\n",
     "def mask_s2_sr_clouds(img: ee.Image) -> ee.Image:\n",
@@ -271,33 +282,126 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "d87201c1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "            <style>\n",
+       "                .geemap-dark {\n",
+       "                    --jp-widgets-color: white;\n",
+       "                    --jp-widgets-label-color: white;\n",
+       "                    --jp-ui-font-color1: white;\n",
+       "                    --jp-layout-color2: #454545;\n",
+       "                    background-color: #383838;\n",
+       "                }\n",
+       "\n",
+       "                .geemap-dark .jupyter-button {\n",
+       "                    --jp-layout-color3: #383838;\n",
+       "                }\n",
+       "\n",
+       "                .geemap-colab {\n",
+       "                    background-color: var(--colab-primary-surface-color, white);\n",
+       "                }\n",
+       "\n",
+       "                .geemap-colab .jupyter-button {\n",
+       "                    --jp-layout-color3: var(--colab-primary-surface-color, white);\n",
+       "                }\n",
+       "            </style>\n",
+       "            "
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "724721b75e264ec3aba27e717b1dc10c",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Map(center=[33.23210782905315, -107.17859474138854], controls=(WidgetControl(options=['position', 'transparent…"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# %%\n",
     "# Quick visual sanity check in an interactive map\n",
     "Map = geemap.Map()\n",
-    "Map.centerObject(aoi, 11)\n",
+    "Map.centerObject(aoi_bbox, 11)\n",
     "\n",
-    "img_2019 = rgb_monthly_composite(2019, 9, aoi)\n",
-    "img_2025 = rgb_monthly_composite(2025, 9, aoi)\n",
+    "img_2019 = rgb_monthly_composite(2019, 9, aoi_bbox)\n",
+    "img_2025 = rgb_monthly_composite(2025, 9, aoi_bbox)\n",
     "\n",
     "vis = {\"min\": 0.02, \"max\": 0.30, \"bands\": [\"B4\", \"B3\", \"B2\"]}\n",
     "\n",
     "Map.addLayer(img_2019, vis, \"2019-09 RGB (median)\")\n",
     "Map.addLayer(img_2025, vis, \"2025-09 RGB (median)\")\n",
-    "Map.addLayer(aoi, {}, \"AOI outline\")\n",
+    "Map.addLayer(aoi_bbox, {}, \"AOI Bounding Box\")\n",
     "Map\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "47bc3aeb",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "            <style>\n",
+       "                .geemap-dark {\n",
+       "                    --jp-widgets-color: white;\n",
+       "                    --jp-widgets-label-color: white;\n",
+       "                    --jp-ui-font-color1: white;\n",
+       "                    --jp-layout-color2: #454545;\n",
+       "                    background-color: #383838;\n",
+       "                }\n",
+       "\n",
+       "                .geemap-dark .jupyter-button {\n",
+       "                    --jp-layout-color3: #383838;\n",
+       "                }\n",
+       "\n",
+       "                .geemap-colab {\n",
+       "                    background-color: var(--colab-primary-surface-color, white);\n",
+       "                }\n",
+       "\n",
+       "                .geemap-colab .jupyter-button {\n",
+       "                    --jp-layout-color3: var(--colab-primary-surface-color, white);\n",
+       "                }\n",
+       "            </style>\n",
+       "            "
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ Drive export tasks created.\n",
+      "   Google Drive → My Drive → openwater_rgb/\n"
+     ]
+    }
+   ],
    "source": [
     "# %%\n",
     "# Export to Google Drive as GeoTIFFs\n",
@@ -314,8 +418,8 @@
     "        maxPixels=1e13,\n",
     "    )\n",
     "\n",
-    "export_rgb_to_drive(img_2019, aoi, \"s2_rgb_2019_09\")\n",
-    "export_rgb_to_drive(img_2025, aoi, \"s2_rgb_2025_09\")\n",
+    "export_rgb_to_drive(img_2019, aoi_bbox, \"s2_rgb_2019_09\")\n",
+    "export_rgb_to_drive(img_2025, aoi_bbox, \"s2_rgb_2025_09\")\n",
     "\n",
     "print(\"✅ Drive export tasks created.\")\n",
     "print(\"   Google Drive → My Drive → openwater_rgb/\")\n"
