make aoi square

--- a/notebooks/06_export_rgb_context_geemap.ipynb
+++ b/notebooks/06_export_rgb_context_geemap.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 19,
    "id": "ddec29d9",
    "metadata": {},
    "outputs": [
@@ -39,13 +39,6 @@
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "✅ Earth Engine initialized\n"
-     ]
     }
    ],
    "source": [
@@ -53,17 +46,10 @@
     "import ee\n",
     "import geemap\n",
     "import geopandas as gpd\n",
+    "from pyproj import Geod\n",
     "\n",
     "\n",
-    "\n",
-    "# Authenticate once (browser popup). After this, ee.Initialize() works.\n",
-    "try:\n",
-    "    ee.Initialize()\n",
-    "except Exception as e:\n",
-    "    ee.Authenticate()\n",
-    "    ee.Initialize()\n",
-    "\n",
-    "print(\"✅ Earth Engine initialized\")\n"
+    "\n"
    ]
   },
   {
@@ -201,8 +187,167 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f47f82ee",
+   "metadata": {},
+   "source": [
+    "#### take original AOI which is long vertically and short wide, change it to a square "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 22,
+   "id": "ae47b281",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "            <style>\n",
+       "                .geemap-dark {\n",
+       "                    --jp-widgets-color: white;\n",
+       "                    --jp-widgets-label-color: white;\n",
+       "                    --jp-ui-font-color1: white;\n",
+       "                    --jp-layout-color2: #454545;\n",
+       "                    background-color: #383838;\n",
+       "                }\n",
+       "\n",
+       "                .geemap-dark .jupyter-button {\n",
+       "                    --jp-layout-color3: #383838;\n",
+       "                }\n",
+       "\n",
+       "                .geemap-colab {\n",
+       "                    background-color: var(--colab-primary-surface-color, white);\n",
+       "                }\n",
+       "\n",
+       "                .geemap-colab .jupyter-button {\n",
+       "                    --jp-layout-color3: var(--colab-primary-surface-color, white);\n",
+       "                }\n",
+       "            </style>\n",
+       "            "
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "width_m=6,683  height_m=19,170\n",
+      "side_m=26,837  buffer_m=13,419\n",
+      "✅ Created aoi_square\n"
+     ]
+    }
+   ],
+   "source": [
+    "# %%\n",
+    "\n",
+    "# Center of bbox\n",
+    "cx = (minx + maxx) / 2\n",
+    "cy = (miny + maxy) / 2\n",
+    "\n",
+    "# Compute width/height in meters using geodesic distances\n",
+    "geod = Geod(ellps=\"WGS84\")\n",
+    "\n",
+    "# width: distance between left/right at center latitude\n",
+    "_, _, width_m = geod.inv(minx, cy, maxx, cy)\n",
+    "\n",
+    "# height: distance between bottom/top at center longitude\n",
+    "_, _, height_m = geod.inv(cx, miny, cx, maxy)\n",
+    "\n",
+    "print(f\"width_m={width_m:,.0f}  height_m={height_m:,.0f}\")\n",
+    "\n",
+    "# Choose square side = max dimension * padding factor\n",
+    "padding = 1.40  # 20% larger than max dimension (tweak 1.1–1.5)\n",
+    "side_m = max(width_m, height_m) * padding\n",
+    "\n",
+    "# Buffer radius = half the square side\n",
+    "buffer_m = side_m / 2\n",
+    "print(f\"side_m={side_m:,.0f}  buffer_m={buffer_m:,.0f}\")\n",
+    "\n",
+    "# Create a \"square-ish\" rectangle AOI in EE:\n",
+    "# buffer() uses meters (geodesic), bounds() makes a lat/lon-aligned rectangle\n",
+    "aoi_square = ee.Geometry.Point([cx, cy]).buffer(buffer_m).bounds()\n",
+    "\n",
+    "print(\"✅ Created aoi_square\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "a0c522b6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "            <style>\n",
+       "                .geemap-dark {\n",
+       "                    --jp-widgets-color: white;\n",
+       "                    --jp-widgets-label-color: white;\n",
+       "                    --jp-ui-font-color1: white;\n",
+       "                    --jp-layout-color2: #454545;\n",
+       "                    background-color: #383838;\n",
+       "                }\n",
+       "\n",
+       "                .geemap-dark .jupyter-button {\n",
+       "                    --jp-layout-color3: #383838;\n",
+       "                }\n",
+       "\n",
+       "                .geemap-colab {\n",
+       "                    background-color: var(--colab-primary-surface-color, white);\n",
+       "                }\n",
+       "\n",
+       "                .geemap-colab .jupyter-button {\n",
+       "                    --jp-layout-color3: var(--colab-primary-surface-color, white);\n",
+       "                }\n",
+       "            </style>\n",
+       "            "
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "5431e86168814d9d87657aeb94150737",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Map(center=[33.2321261930872, -107.17834499385486], controls=(WidgetControl(options=['position', 'transparent_…"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# %%\n",
+    "\n",
+    "\n",
+    "Map = geemap.Map()\n",
+    "Map.centerObject(aoi_square, 11)\n",
+    "\n",
+    "Map.addLayer(aoi_square, {}, \"AOI square (export)\")\n",
+    "Map.addLayer(ee.Geometry.Rectangle([minx, miny, maxx, maxy]), {}, \"Original bbox\")\n",
+    "Map\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
    "id": "2f51da4e",
    "metadata": {},
    "outputs": [
@@ -282,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 27,
    "id": "d87201c1",
    "metadata": {},
    "outputs": [
@@ -319,38 +464,23 @@
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "724721b75e264ec3aba27e717b1dc10c",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Map(center=[33.23210782905315, -107.17859474138854], controls=(WidgetControl(options=['position', 'transparent…"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
     "# %%\n",
     "# Quick visual sanity check in an interactive map\n",
     "Map = geemap.Map()\n",
-    "Map.centerObject(aoi_bbox, 11)\n",
+    "Map.centerObject(aoi_square, 11)\n",
     "\n",
-    "img_2019 = rgb_monthly_composite(2019, 9, aoi_bbox)\n",
-    "img_2025 = rgb_monthly_composite(2025, 9, aoi_bbox)\n",
+    "img_2019 = rgb_monthly_composite(2019, 9, aoi_square)\n",
+    "img_2025 = rgb_monthly_composite(2025, 9, aoi_square)\n",
     "\n",
     "vis = {\"min\": 0.02, \"max\": 0.30, \"bands\": [\"B4\", \"B3\", \"B2\"]}\n",
     "\n",
     "Map.addLayer(img_2019, vis, \"2019-09 RGB (median)\")\n",
     "Map.addLayer(img_2025, vis, \"2025-09 RGB (median)\")\n",
-    "Map.addLayer(aoi_bbox, {}, \"AOI Bounding Box\")\n",
-    "Map\n"
+    "Map.addLayer(aoi_square, {}, \"AOI Square\")\n",
+    "\n"
    ]
   },
   {
