--- a/notebooks/06_export_rgb_context_geemap.ipynb
+++ b/notebooks/06_export_rgb_context_geemap.ipynb
@@ -427,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 29,
    "id": "d87201c1",
    "metadata": {},
    "outputs": [
@@ -464,6 +464,21 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "0c67ae4f26f6445ea4afc9e93edc335b",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Map(center=[33.2321261930872, -107.17834499385486], controls=(WidgetControl(options=['position', 'transparent_…"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -480,7 +495,7 @@
     "Map.addLayer(img_2019, vis, \"2019-09 RGB (median)\")\n",
     "Map.addLayer(img_2025, vis, \"2025-09 RGB (median)\")\n",
     "Map.addLayer(aoi_square, {}, \"AOI Square\")\n",
-    "\n"
+    "Map \n"
    ]
   },
   {
