--- a/notebooks/06_export_rgb_context_geemap.ipynb
+++ b/notebooks/06_export_rgb_context_geemap.ipynb
@@ -47,6 +47,7 @@
     "import geemap\n",
     "import geopandas as gpd\n",
     "from pyproj import Geod\n",
+    "from pathlib import Path\n",
     "\n",
     "\n",
     "\n"
@@ -67,6 +68,53 @@
     "    ee.Initialize()\n",
     "\n",
     "print(\"✅ Earth Engine initialized\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "405e46a2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "            <style>\n",
+       "                .geemap-dark {\n",
+       "                    --jp-widgets-color: white;\n",
+       "                    --jp-widgets-label-color: white;\n",
+       "                    --jp-ui-font-color1: white;\n",
+       "                    --jp-layout-color2: #454545;\n",
+       "                    background-color: #383838;\n",
+       "                }\n",
+       "\n",
+       "                .geemap-dark .jupyter-button {\n",
+       "                    --jp-layout-color3: #383838;\n",
+       "                }\n",
+       "\n",
+       "                .geemap-colab {\n",
+       "                    background-color: var(--colab-primary-surface-color, white);\n",
+       "                }\n",
+       "\n",
+       "                .geemap-colab .jupyter-button {\n",
+       "                    --jp-layout-color3: var(--colab-primary-surface-color, white);\n",
+       "                }\n",
+       "            </style>\n",
+       "            "
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# Export PNGs locally (recommended for README)\n",
+    "OUT_DIR = Path(r\"C:\\GIS\\my_water_projects\\openwater-shrinking-lake-monitor\\outputs\\images\")\n",
+    "OUT_DIR.mkdir(parents=True, exist_ok=True)"
    ]
   },
   {
@@ -131,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "496ae170",
    "metadata": {},
    "outputs": [
@@ -427,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 36,
    "id": "d87201c1",
    "metadata": {},
    "outputs": [
@@ -468,7 +516,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0c67ae4f26f6445ea4afc9e93edc335b",
+       "model_id": "0b57334d71944124a2e1c85aca0728e7",
        "version_major": 2,
        "version_minor": 0
       },
@@ -476,7 +524,7 @@
        "Map(center=[33.2321261930872, -107.17834499385486], controls=(WidgetControl(options=['position', 'transparent_…"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -490,18 +538,25 @@
     "img_2019 = rgb_monthly_composite(2019, 9, aoi_square)\n",
     "img_2025 = rgb_monthly_composite(2025, 9, aoi_square)\n",
     "\n",
-    "vis = {\"min\": 0.02, \"max\": 0.30, \"bands\": [\"B4\", \"B3\", \"B2\"]}\n",
+    "vis = {\"min\": 0.05, \"max\": 0.40, \"bands\": [\"B4\", \"B3\", \"B2\"], \"gamma\": 1.3}\n",
     "\n",
     "Map.addLayer(img_2019, vis, \"2019-09 RGB (median)\")\n",
     "Map.addLayer(img_2025, vis, \"2025-09 RGB (median)\")\n",
-    "Map.addLayer(aoi_square, {}, \"AOI Square\")\n",
+    "\n",
+    "aoi_outline = ee.FeatureCollection([ee.Feature(aoi_square)])\n",
+    "Map.addLayer(\n",
+    "    aoi_outline.style(**{\"color\": \"yellow\", \"width\": 2, \"fillColor\": \"00000000\"}),\n",
+    "    {},\n",
+    "    \"AOI Square (outline)\"\n",
+    ")\n",
+    "\n",
     "Map \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "47bc3aeb",
+   "execution_count": 61,
+   "id": "e55905c9",
    "metadata": {},
    "outputs": [
     {
@@ -542,49 +597,209 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "✅ Drive export tasks created.\n",
-      "   Google Drive → My Drive → openwater_rgb/\n"
+      "✅ Started native Drive exports: C3FBHIAZTDUHA6ZWG7QMTQUL RA6EAHMGA57KHBJ7H4O342P2\n"
      ]
     }
    ],
    "source": [
-    "# %%\n",
-    "# Export to Google Drive as GeoTIFFs\n",
-    "# These become tasks you can monitor in the notebook output or in the EE Tasks UI.\n",
     "\n",
-    "def export_rgb_to_drive(img: ee.Image, aoi: ee.Geometry, name: str, folder: str = \"openwater_rgb\") -> None:\n",
-    "    geemap.ee_export_image_to_drive(\n",
-    "        image=img.select([\"B4\", \"B3\", \"B2\"]),\n",
+    "\n",
+    "def export_rgb_to_drive_vis_native(img: ee.Image, aoi: ee.Geometry, name: str, folder: str = \"openwater_rgb\", scale: int = 10):\n",
+    "    task = ee.batch.Export.image.toDrive(\n",
+    "        image=img.visualize(**vis),   # matches your Map.addLayer vis\n",
     "        description=name,\n",
     "        folder=folder,\n",
     "        fileNamePrefix=name,\n",
     "        region=aoi,\n",
-    "        scale=10,\n",
-    "        maxPixels=1e13,\n",
+    "        scale=scale,\n",
+    "        maxPixels=1e13\n",
     "    )\n",
+    "    task.start()\n",
+    "    return task\n",
     "\n",
-    "export_rgb_to_drive(img_2019, aoi_bbox, \"s2_rgb_2019_09\")\n",
-    "export_rgb_to_drive(img_2025, aoi_bbox, \"s2_rgb_2025_09\")\n",
+    "task_2019_v3 = export_rgb_to_drive_vis_native(img_2019, aoi_square, \"s2_rgb_2019_09_v3\")\n",
+    "task_2025_v3 = export_rgb_to_drive_vis_native(img_2025, aoi_square, \"s2_rgb_2025_09_v3\")\n",
     "\n",
-    "print(\"✅ Drive export tasks created.\")\n",
-    "print(\"   Google Drive → My Drive → openwater_rgb/\")\n"
+    "print(\"✅ Started native Drive exports:\", task_2019_v3.id, task_2025_v3.id)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "d0192486",
+   "execution_count": 62,
+   "id": "3df5222a",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "            <style>\n",
+       "                .geemap-dark {\n",
+       "                    --jp-widgets-color: white;\n",
+       "                    --jp-widgets-label-color: white;\n",
+       "                    --jp-ui-font-color1: white;\n",
+       "                    --jp-layout-color2: #454545;\n",
+       "                    background-color: #383838;\n",
+       "                }\n",
+       "\n",
+       "                .geemap-dark .jupyter-button {\n",
+       "                    --jp-layout-color3: #383838;\n",
+       "                }\n",
+       "\n",
+       "                .geemap-colab {\n",
+       "                    background-color: var(--colab-primary-surface-color, white);\n",
+       "                }\n",
+       "\n",
+       "                .geemap-colab .jupyter-button {\n",
+       "                    --jp-layout-color3: var(--colab-primary-surface-color, white);\n",
+       "                }\n",
+       "            </style>\n",
+       "            "
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "C3FBHIAZTDUHA6ZWG7QMTQUL READY s2_rgb_2019_09_v3\n",
+      "RA6EAHMGA57KHBJ7H4O342P2 READY s2_rgb_2025_09_v3\n"
+     ]
+    }
+   ],
+   "source": [
+    "for t in [task_2019_v3, task_2025_v3]:\n",
+    "    print(t.id, t.status().get(\"state\"), t.status().get(\"description\"))\n"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "7a8fa380",
+   "execution_count": 60,
+   "id": "a8a5fbfd",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "            <style>\n",
+       "                .geemap-dark {\n",
+       "                    --jp-widgets-color: white;\n",
+       "                    --jp-widgets-label-color: white;\n",
+       "                    --jp-ui-font-color1: white;\n",
+       "                    --jp-layout-color2: #454545;\n",
+       "                    background-color: #383838;\n",
+       "                }\n",
+       "\n",
+       "                .geemap-dark .jupyter-button {\n",
+       "                    --jp-layout-color3: #383838;\n",
+       "                }\n",
+       "\n",
+       "                .geemap-colab {\n",
+       "                    background-color: var(--colab-primary-surface-color, white);\n",
+       "                }\n",
+       "\n",
+       "                .geemap-colab .jupyter-button {\n",
+       "                    --jp-layout-color3: var(--colab-primary-surface-color, white);\n",
+       "                }\n",
+       "            </style>\n",
+       "            "
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "targets = {\"s2_rgb_2019_09\", \"s2_rgb_2025_09\"}\n",
+    "\n",
+    "tasks = ee.batch.Task.list()\n",
+    "\n",
+    "for t in tasks:\n",
+    "    status = t.status()\n",
+    "    desc = status.get(\"description\")\n",
+    "    state = status.get(\"state\")\n",
+    "    if desc in targets and state in {\"READY\", \"RUNNING\"}:\n",
+    "        t.cancel()\n",
+    "        print(\"Canceled:\", t.id, state, desc)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "id": "f18afd26",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "            <style>\n",
+       "                .geemap-dark {\n",
+       "                    --jp-widgets-color: white;\n",
+       "                    --jp-widgets-label-color: white;\n",
+       "                    --jp-ui-font-color1: white;\n",
+       "                    --jp-layout-color2: #454545;\n",
+       "                    background-color: #383838;\n",
+       "                }\n",
+       "\n",
+       "                .geemap-dark .jupyter-button {\n",
+       "                    --jp-layout-color3: #383838;\n",
+       "                }\n",
+       "\n",
+       "                .geemap-colab {\n",
+       "                    background-color: var(--colab-primary-surface-color, white);\n",
+       "                }\n",
+       "\n",
+       "                .geemap-colab .jupyter-button {\n",
+       "                    --jp-layout-color3: var(--colab-primary-surface-color, white);\n",
+       "                }\n",
+       "            </style>\n",
+       "            "
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "FVRE4NZP7FABGMAEWE6TQTRJ READY s2_rgb_2025_09_v2\n",
+      "G5M2QJM2NH52BDV23WE5F3F2 READY s2_rgb_2019_09_v2\n",
+      "Q3WPC5KBDTRXOSUQCVP4C5M3 CANCELLED s2_rgb_2025_09\n",
+      "2T7SDLF2RXTACKDVU4GV7O3W CANCELLED s2_rgb_2019_09\n",
+      "4NSV5BRHBYWZV3B3ZGD7VSWB CANCELLED s2_rgb_2025_09\n",
+      "7LBMFN3T4NBJWAY56XZS2CTH CANCEL_REQUESTED s2_rgb_2019_09\n",
+      "ZT64JZLAKWEKS23SPZJJZESK CANCEL_REQUESTED s2_rgb_2025_09\n",
+      "VYO2LM5WVSAW6BDPFLHPW242 COMPLETED s2_rgb_2019_09\n",
+      "RSNGPUGBMFDR4I4RGJAABXRF COMPLETED s2_rgb_2025_09\n",
+      "7XP4SVPPFDUO4KKJNILB52FY COMPLETED s2_rgb_2019_09\n",
+      "MRI642CDUFM3NIPY2HF645ID COMPLETED s2_rgb_2025_09\n",
+      "5SBSGJYAWAW2TUFSKZXLFF4B COMPLETED s2_rgb_2019_09\n",
+      "EEVUL5JNI35AODSIUQPQ2FOS COMPLETED s2_rgb_2025_09\n",
+      "CTMLNRPHJWQHPZR45T56YOAM COMPLETED s2_rgb_2019_09\n"
+     ]
+    }
+   ],
+   "source": [
+    "tasks = ee.batch.Task.list()\n",
+    "for t in tasks[:20]:\n",
+    "    s = t.status()\n",
+    "    if \"s2_rgb_\" in (s.get(\"description\") or \"\"):\n",
+    "        print(t.id, s.get(\"state\"), s.get(\"description\"))\n"
+   ]
   }
  ],
  "metadata": {
